@@ -1,51 +1,58 @@
 package com.hartwig.hmftools.sage.vis;
 
-import static java.lang.Math.abs;
 import static java.lang.Math.max;
 import static java.lang.Math.min;
 import static java.lang.Math.round;
 import static java.lang.String.format;
 import static java.util.Map.entry;
 
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.CONSENSUS_INFO_DELIM;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.CONSENSUS_READ_ATTRIBUTE;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.CONSENSUS_TYPE_ATTRIBUTE;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.MATE_CIGAR_ATTRIBUTE;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.NO_POSITION;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.getMateAlignmentEnd;
 import static com.hartwig.hmftools.common.bam.SamRecordUtils.getNumEvents;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.getOrientationString;
+import static com.hartwig.hmftools.common.bam.SamRecordUtils.inferredInsertSizeAbs;
 import static com.hartwig.hmftools.common.genome.chromosome.HumanChromosome.CHR_PREFIX;
 import static com.hartwig.hmftools.common.genome.refgenome.RefGenomeSource.loadRefGenome;
 import static com.hartwig.hmftools.common.genome.refgenome.RefGenomeVersion.V37;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.CONSENSUS_INFO_DELIM;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.CONSENSUS_READ_ATTRIBUTE;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.MATE_CIGAR_ATTRIBUTE;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.NO_POSITION;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.CONSENSUS_TYPE_ATTRIBUTE;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.getMateAlignmentEnd;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.inferredInsertSizeAbs;
-import static com.hartwig.hmftools.common.bam.SamRecordUtils.getOrientationString;
 import static com.hartwig.hmftools.common.utils.file.FileWriterUtils.closeBufferedWriter;
 import static com.hartwig.hmftools.common.utils.file.FileWriterUtils.createBufferedWriter;
+import static com.hartwig.hmftools.common.variant.SageVcfTags.AVG_RECALIBRATED_BASE_QUAL;
 import static com.hartwig.hmftools.common.variant.SageVcfTags.MIN_COORDS_COUNT;
 import static com.hartwig.hmftools.common.variant.SageVcfTags.UMI_TYPE_COUNTS;
-import static com.hartwig.hmftools.common.variant.SageVcfTags.AVG_RECALIBRATED_BASE_QUAL;
 import static com.hartwig.hmftools.sage.SageCommon.SG_LOGGER;
 import static com.hartwig.hmftools.sage.vcf.VcfTags.AVG_READ_MAP_QUALITY;
 import static com.hartwig.hmftools.sage.vcf.VcfTags.AVG_SEQ_TECH_BASE_QUAL;
 import static com.hartwig.hmftools.sage.vcf.VcfTags.FRAG_STRAND_BIAS;
 import static com.hartwig.hmftools.sage.vcf.VcfTags.READ_STRAND_BIAS;
+import static com.hartwig.hmftools.sage.vis.AminoAcidUtil.getAltGeneRegionViewModels;
+import static com.hartwig.hmftools.sage.vis.AminoAcidUtil.getGeneRegionLabel;
+import static com.hartwig.hmftools.sage.vis.AminoAcidUtil.getGeneRegions;
+import static com.hartwig.hmftools.sage.vis.AminoAcidUtil.getRefGeneRegionViewModels;
 import static com.hartwig.hmftools.sage.vis.ColorUtil.DARK_BLUE;
+import static com.hartwig.hmftools.sage.vis.ReadTableColumn.FINAL_BASE_QUAL_COL;
+import static com.hartwig.hmftools.sage.vis.ReadTableColumn.FINAL_MAP_QUAL_COL;
 import static com.hartwig.hmftools.sage.vis.ReadTableColumn.FINAL_QUAL_COL;
 import static com.hartwig.hmftools.sage.vis.ReadTableColumn.MAP_QUAL_COL;
 import static com.hartwig.hmftools.sage.vis.ReadTableColumn.MATE_TYPE_COL;
-import static com.hartwig.hmftools.sage.vis.ReadTableColumn.FINAL_BASE_QUAL_COL;
-import static com.hartwig.hmftools.sage.vis.ReadTableColumn.FINAL_MAP_QUAL_COL;
 import static com.hartwig.hmftools.sage.vis.ReadTableColumn.ORIENTATION_COL;
 import static com.hartwig.hmftools.sage.vis.ReadTableColumn.SEQ_TECH_BASE_QUAL_COL;
+import static com.hartwig.hmftools.sage.vis.SageVisConstants.AA_VARIANT_TYPE_IDX;
 import static com.hartwig.hmftools.sage.vis.SageVisConstants.BASE_FONT_STYLE;
 import static com.hartwig.hmftools.sage.vis.SageVisConstants.DISPLAY_EVERY_NTH_COORD;
+import static com.hartwig.hmftools.sage.vis.SageVisConstants.GENE_NAME_IDX;
+import static com.hartwig.hmftools.sage.vis.SageVisConstants.HGVS_INDEX;
+import static com.hartwig.hmftools.sage.vis.SageVisConstants.IMPACT_KEY;
 import static com.hartwig.hmftools.sage.vis.SageVisConstants.MAX_READ_UPPER_LIMIT;
 import static com.hartwig.hmftools.sage.vis.SageVisConstants.READ_HEIGHT_PX;
-import static com.hartwig.hmftools.sage.vis.SageVisConstants.VARIANT_INFO_SPACING_SIZE;
+import static com.hartwig.hmftools.sage.vis.SageVisConstants.TRANSCRIPT_NAME_IDX;
 import static com.hartwig.hmftools.sage.vis.SvgRender.renderBaseSeq;
 import static com.hartwig.hmftools.sage.vis.SvgRender.renderCoords;
+import static com.hartwig.hmftools.sage.vis.SvgRender.renderGeneData;
 
-import static htsjdk.variant.vcf.VCFConstants.ALLELE_FREQUENCY_KEY;
 import static j2html.TagCreator.body;
 import static j2html.TagCreator.div;
 import static j2html.TagCreator.header;
@@ -60,20 +67,21 @@ import static j2html.TagCreator.tr;
 import java.awt.Color;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.StringJoiner;
-import java.util.TreeSet;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
@@ -81,17 +89,20 @@ import java.util.stream.Stream;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+import com.google.common.collect.Sets;
+import com.hartwig.hmftools.common.gene.TranscriptAminoAcids;
+import com.hartwig.hmftools.common.gene.TranscriptData;
 import com.hartwig.hmftools.common.genome.refgenome.RefGenomeCoordinates;
 import com.hartwig.hmftools.common.genome.refgenome.RefGenomeSource;
 import com.hartwig.hmftools.common.region.BaseRegion;
-import com.hartwig.hmftools.common.region.ChrBaseRegion;
+import com.hartwig.hmftools.common.variant.SimpleVariant;
 import com.hartwig.hmftools.common.variant.VariantTier;
+import com.hartwig.hmftools.common.variant.VcfFileReader;
+import com.hartwig.hmftools.sage.ReferenceData;
 import com.hartwig.hmftools.sage.SageConfig;
 import com.hartwig.hmftools.sage.common.ReadContextMatch;
-import com.hartwig.hmftools.sage.common.VariantReadContext;
-import com.hartwig.hmftools.sage.common.RefSequence;
 import com.hartwig.hmftools.sage.common.SageVariant;
-import com.hartwig.hmftools.common.variant.SimpleVariant;
+import com.hartwig.hmftools.sage.common.VariantReadContext;
 import com.hartwig.hmftools.sage.evidence.ReadContextCounter;
 import com.hartwig.hmftools.sage.quality.QualityScores;
 import com.hartwig.hmftools.sage.sync.FragmentData;
@@ -100,6 +111,7 @@ import org.jetbrains.annotations.Nullable;
 import org.jfree.svg.SVGGraphics2D;
 
 import htsjdk.samtools.SAMRecord;
+import htsjdk.variant.variantcontext.VariantContext;
 import j2html.tags.DomContent;
 import j2html.tags.specialized.TdTag;
 
@@ -111,25 +123,23 @@ public class VariantVis
             rawHtml("<script src=\"https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js\"></script>");
 
     private static final List<ReadContextMatch> SORTED_MATCH_TYPES = Arrays.stream(ReadContextMatch.values())
-            .sorted(Comparator.comparingInt(x -> visSortKey(x)))
-            .collect(Collectors.toList());
+            .sorted(Comparator.comparingInt(VariantVis::visSortKey))
+            .toList();
 
-    public static int visSortKey(final ReadContextMatch type)
+    private static int visSortKey(final ReadContextMatch type)
     {
-        switch(type)
+        return switch(type)
         {
-            case FULL: return 0;
-            case PARTIAL_CORE: return 1;
-            case REALIGNED: return 2;
-            case CORE: return 3;
-            case REF: return 3;
-            case NONE:
-            default:
-                return 5;
-        }
+            case FULL -> 0;
+            case PARTIAL_CORE -> 1;
+            case REALIGNED -> 2;
+            case CORE -> 3;
+            case REF -> 3;
+            default -> 5;
+        };
     }
 
-    private static Map<String, SortedSet<String>> VARIANT_INDEXED_BASES_MAP = Maps.newConcurrentMap();
+    private static final Map<String, SortedSet<String>> VARIANT_INDEXED_BASES_MAP = Maps.newConcurrentMap();
 
     private final VisConfig mConfig;
 
@@ -162,7 +172,6 @@ public class VariantVis
         mReadContext = readContext;
         mVariantKey = mVariant.chromosome() + "_" + mVariant.position() + "_" + mVariant.ref() + "_" + mVariant.alt();
 
-        int indelSize = mVariant.ref().length() - mVariant.alt().length();
         int coreStart = mReadContext.CorePositionStart;
         int coreEnd = mReadContext.CorePositionEnd;
         int flankStart = coreStart - mReadContext.leftFlankLength();
@@ -208,15 +217,7 @@ public class VariantVis
 
         mReadCountByType = Maps.newEnumMap(ReadContextMatch.class);
         mReadCount = 0;
-
-        SortedSet<String> indexedBasesKeySet = VARIANT_INDEXED_BASES_MAP.get(mVariantKey);
-        if(indexedBasesKeySet == null)
-        {
-            indexedBasesKeySet = new TreeSet<>();
-            VARIANT_INDEXED_BASES_MAP.put(mVariantKey, indexedBasesKeySet);
-        }
-
-        indexedBasesKeySet.add(mIndexedBasesKey);
+        VARIANT_INDEXED_BASES_MAP.computeIfAbsent(mVariantKey, k -> Sets.newTreeSet()).add(mIndexedBasesKey);
     }
 
     private static DomContent styledTable(final List<DomContent> elems, final CssBuilder style)
@@ -224,8 +225,8 @@ public class VariantVis
         return table().with(elems).withStyle(BASE_FONT_STYLE.merge(style).toString());
     }
 
-    public static void writeToHtmlFile(
-            final SageVariant sageVariant, final List<String> tumorIds, final List<String> referenceIds, final VisConfig config)
+    public static void writeToHtmlFile(final SageVariant sageVariant, final List<String> tumorIds, final List<String> referenceIds,
+            final VisConfig config, @Nullable final ReferenceData refData)
     {
         if(config.PassOnly && !sageVariant.isPassing())
             return;
@@ -235,10 +236,10 @@ public class VariantVis
 
         // can be null if doesn't meet the configured criteria
         List<VariantVis> tumorVis = tumorReadCounters.stream()
-                .map(ReadContextCounter::variantVis).filter(x -> x != null).collect(Collectors.toList());
+                .map(ReadContextCounter::variantVis).filter(Objects::nonNull).toList();
 
         List<VariantVis> refVis = refReadCounters.stream()
-                .map(ReadContextCounter::variantVis).filter(x -> x != null).collect(Collectors.toList());
+                .map(ReadContextCounter::variantVis).filter(Objects::nonNull).toList();
 
         if(tumorVis.isEmpty() && refVis.isEmpty())
             return;
@@ -246,8 +247,20 @@ public class VariantVis
         ReadContextCounter firstCounter = !tumorReadCounters.isEmpty() ? tumorReadCounters.get(0) : refReadCounters.get(0);
         VariantVis firstVis = !tumorVis.isEmpty() ? tumorVis.get(0) : refVis.get(0);
 
+        AminoAcidElements aaElements = getAminoAcidsElements(config, refData, firstVis.mViewRegion, sageVariant, firstVis.mRefGenome);
+
+        String aaVariantType = null;
+        String geneName = null;
+        if(aaElements != null && aaElements.variant != null)
+        {
+            VariantContext variantContext = aaElements.variant;
+            List<String> impact = (List<String>) variantContext.getAttribute(IMPACT_KEY);
+            geneName = impact.get(GENE_NAME_IDX);
+            aaVariantType = impact.get(AA_VARIANT_TYPE_IDX);
+        }
+
         String sampleId = tumorIds.isEmpty() ? referenceIds.get(0) : tumorIds.get(0);
-        String filename = firstVis.getFilename(sampleId);
+        String filename = firstVis.getFilename(sampleId, geneName, aaVariantType);
 
         int tumorTotalReadCount = tumorVis.stream().mapToInt(x -> x.mReadCount).sum();
         int refTotalReadCount = refVis.stream().mapToInt(x -> x.mReadCount).sum();
@@ -258,11 +271,11 @@ public class VariantVis
             return;
         }
 
-        tumorVis.forEach(x -> x.downsampleReadEvidenceRecords());
-        refVis.forEach(x -> x.downsampleReadEvidenceRecords());
+        tumorVis.forEach(VariantVis::downsampleReadEvidenceRecords);
+        refVis.forEach(VariantVis::downsampleReadEvidenceRecords);
 
-        Stream<DomContent> tumorReadTableRows = tumorVis.stream().map(x -> x.renderReads(true)).flatMap(x -> x.stream());
-        Stream<DomContent> refReadTableRows = refVis.stream().map(x -> x.renderReads(false)).flatMap(x -> x.stream());
+        Stream<DomContent> tumorReadTableRows = tumorVis.stream().map(x -> x.renderReads(true, aaElements)).flatMap(Collection::stream);
+        Stream<DomContent> refReadTableRows = refVis.stream().map(x -> x.renderReads(false, aaElements)).flatMap(Collection::stream);
         List<DomContent> readTableRows = Stream.concat(tumorReadTableRows, refReadTableRows).collect(Collectors.toList());
 
         CssBuilder readTableStyle = CssBuilder.EMPTY.borderSpacing(CssSize.ZERO);
@@ -270,23 +283,31 @@ public class VariantVis
 
         DomContent readTable = div(styledTable(readTableRows, readTableStyle));
         DomContent verticalSpacer = div().withStyle(verticalSpacerStyle.toString());
+        DomContent variantInfo = firstVis.renderVariantInfo(tumorIds, referenceIds);
+        DomContent sampleInfo = styledTable(List.of(tr(
+                td(renderSampleSummaryAndCountsTable(tumorReadCounters, refReadCounters))
+		        .withStyle(CssBuilder.EMPTY.verticalAlign("top")
+                        .toString()),
+                td(renderSampleQualAndSiteInfo(tumorReadCounters, refReadCounters, firstCounter))
+		        .withStyle(CssBuilder.EMPTY.verticalAlign("top")
+                        .toString()),
+                td(firstVis.renderVariantInfoTable(
+                        (int) (-10 * firstCounter.logTqp()),
+                        round(round(firstCounter.mapQualFactor() * 10.0d) / 10.0d),
+                        sageVariant.nearIndel(),
+                        sageVariant.filtersStringSet(),
+                        aaElements)).withStyle(CssBuilder.EMPTY.verticalAlign("top").toString()))), CssBuilder.EMPTY);
+
         String htmlStr = html(
                 header(JQUERY_SCRIPT),
                 body(
-                        firstVis.renderVariantInfo(
-                                (int)(-10*firstCounter.logTqp()),
-                                Math.round((double)round(firstCounter.mapQualFactor() * 10d) / 10d),
-                                sageVariant.nearIndel(),
-                                firstCounter.readEdgeDistance().maxAltDistanceFromEdge(),
-                                firstCounter.readEdgeDistance().avgDistanceFromEdge(),
-                                firstCounter.readEdgeDistance().avgAltDistanceFromEdge(),
-                                sageVariant.filtersStringSet()),
+                        variantInfo,
                         verticalSpacer,
-                        renderSampleInfoTable(tumorReadCounters, refReadCounters, tumorIds, referenceIds),
+                        sampleInfo,
                         readTable,
                         getJavascript()).withStyle(BASE_FONT_STYLE.toString())).render();
 
-        String filePath = Paths.get(firstVis.mConfig.OutputDir, filename).toString();
+        String filePath = (new File(firstVis.mConfig.OutputDir, filename)).toString();
 
         SG_LOGGER.debug("writing variant vis file: {}", filePath);
 
@@ -304,100 +325,272 @@ public class VariantVis
         }
     }
 
-    private static DomContent renderSampleInfoTable(
-            final List<ReadContextCounter> tumorReadCounters,
-            final List<ReadContextCounter> refReadCounters, final List<String> tumorIds, final List<String> refIds)
+    private static List<TdTag> getSampleInfoRowElements(final String key, @Nullable final String tumor, @Nullable final String ref)
     {
-        CssBuilder sampleInfoTableStyle = CssBuilder.EMPTY.borderSpacing(CssSize.ZERO);
-        CssBuilder firstColCellStyle = CssBuilder.EMPTY.paddingLeft(CssSize.em(0.5)).paddingRight(CssSize.em(0.5));
-        CssBuilder cellStyle = firstColCellStyle.textAlign("right");
-        CssBuilder firstColHeaderStyle = firstColCellStyle.backgroundColor(Color.LIGHT_GRAY);
-        CssBuilder headerStyle = cellStyle.backgroundColor(Color.LIGHT_GRAY);
+        List<TdTag> elements = Lists.newArrayList();
+        elements.add(td(key));
+        if(tumor != null)
+            elements.add(td(tumor));
+
+        if(ref != null)
+            elements.add(td(ref));
+
+        return elements;
+    }
+
+    private static DomContent renderSampleSummaryAndCountsTable(
+            final List<ReadContextCounter> tumorReadCounters, final List<ReadContextCounter> refReadCounters)
+    {
+        CssBuilder borderStyle = CssBuilder.EMPTY.border(CssSize.px(1.0), "solid", Color.BLACK).borderCollapse("collapse");
+        CssBuilder tableStyle = borderStyle.marginRight(CssSize.px(10.0));
+        CssBuilder headerStyle = CssBuilder.EMPTY.fontWeight("bold").textAlign("center").backgroundColor(Color.LIGHT_GRAY);
+        CssBuilder cellStyle = CssBuilder.EMPTY.paddingLeft(CssSize.em(0.5)).paddingRight(CssSize.em(0.5));
+
+        ReadContextCounter tumorCounter = null;
+        int colCount = 1;
+        for(ReadContextCounter counter : tumorReadCounters)
+        {
+            if(counter.variantVis() == null)
+                continue;
+
+            tumorCounter = counter;
+            colCount++;
+            break;
+        }
+
+        ReadContextCounter refCounter = null;
+        for(ReadContextCounter counter : refReadCounters)
+        {
+            if(counter.variantVis() == null)
+                continue;
+
+            refCounter = counter;
+            colCount++;
+            break;
+        }
+
+        List<List<TdTag>> contentRowsElems = Lists.newArrayList();
+        String tumorValue = tumorCounter == null ? null : String.valueOf(tumorCounter.altSupport());
+        String refValue = refCounter == null ? null : String.valueOf(refCounter.altSupport());
+        List<TdTag> elems = getSampleInfoRowElements("AD", tumorValue, refValue);
+        contentRowsElems.add(elems);
+
+        tumorValue = tumorCounter == null ? null : String.valueOf(tumorCounter.depth());
+        refValue = refCounter == null ? null : String.valueOf(refCounter.depth());
+        elems = getSampleInfoRowElements("DP", tumorValue, refValue);
+        contentRowsElems.add(elems);
+
+        tumorValue = tumorCounter == null ? null : format("%.3f", tumorCounter.vaf());
+        refValue = refCounter == null ? null : format("%.3f", refCounter.vaf());
+        elems = getSampleInfoRowElements("AF", tumorValue, refValue);
+        contentRowsElems.add(elems);
+
+        VariantVis tumorVariantVis = tumorCounter == null ? null : tumorCounter.variantVis();
+        VariantVis refVariantVis = refCounter == null ? null : refCounter.variantVis();
+        for(ReadContextMatch matchType : SORTED_MATCH_TYPES)
+        {
+            String key = matchType.name();
+            tumorValue = tumorVariantVis == null ? null : String.valueOf(tumorVariantVis.mReadCountByType.getOrDefault(matchType, 0));
+            refValue = refVariantVis == null ? null : String.valueOf(refVariantVis.mReadCountByType.getOrDefault(matchType, 0));
+            elems = getSampleInfoRowElements(key, tumorValue, refValue);
+            contentRowsElems.add(elems);
+        }
 
         List<DomContent> rows = Lists.newArrayList();
 
-        List<String> headers = Lists.newArrayList("SAMPLE", "RAW_QUAL", "AD", ALLELE_FREQUENCY_KEY, "DP");
-        headers.addAll(SORTED_MATCH_TYPES.stream().map(ReadContextMatch::name).collect(Collectors.toList()));
-        headers.addAll(Lists.newArrayList(
-                AVG_RECALIBRATED_BASE_QUAL, AVG_SEQ_TECH_BASE_QUAL, AVG_READ_MAP_QUALITY, FRAG_STRAND_BIAS,
-                READ_STRAND_BIAS, "JIT", MIN_COORDS_COUNT, UMI_TYPE_COUNTS));
+        tumorValue = tumorCounter == null ? null : "Tumor";
+        refValue = refCounter == null ? null : "Normal";
+        elems = getSampleInfoRowElements("Info", tumorValue, refValue).stream()
+                .map(x -> x.withStyle(cellStyle.merge(borderStyle).toString()))
+                .toList();
 
-        List<DomContent> headerColumns = Lists.newArrayList();
-        for(int i = 0; i < headers.size(); i++)
+        rows.add(tr().with(elems).withStyle(headerStyle.toString()));
+        for(int i = 0; i < contentRowsElems.size(); i++)
         {
-            CssBuilder style = i == 0 ? firstColHeaderStyle : headerStyle;
-            headerColumns.add(td(headers.get(i)).withStyle(style.toString()));
+            // spacer row
+            if(i == 3)
+                rows.add(tr(td("Support By Type").withStyle(cellStyle.noBorder().toString())
+                        .attr("colspan", colCount)).withStyle(headerStyle.toString()));
+
+            List<TdTag> contentRowElems = contentRowsElems.get(i);
+            contentRowElems.set(0, contentRowElems.get(0).withStyle(cellStyle.merge(borderStyle).toString()));
+            for(int j = 1; j < contentRowElems.size(); j++)
+                contentRowElems.set(j, contentRowElems.get(j)
+                        .withStyle(CssBuilder.EMPTY.textAlign("right").merge(cellStyle.merge(borderStyle)).toString()));
+
+            rows.add(tr().with(contentRowElems));
         }
 
-        rows.add(tr().with(headerColumns));
+        DomContent table = styledTable(rows, tableStyle);
+        return div(table);
+    }
 
-        List<String> allIds = Lists.newArrayList();
-        List<ReadContextCounter> allCounters = Lists.newArrayList();
-        for (int i = 0; i < tumorReadCounters.size(); i++)
+    private static DomContent renderSampleQualAndSiteInfo(final List<ReadContextCounter> tumorReadCounters,
+            final List<ReadContextCounter> refReadCounters, final ReadContextCounter firstCounter)
+    {
+        CssBuilder borderStyle = CssBuilder.EMPTY.border(CssSize.px(1.0), "solid", Color.BLACK).borderCollapse("collapse");
+        CssBuilder tableStyle = borderStyle.marginRight(CssSize.px(10.0));
+        CssBuilder headerStyle = CssBuilder.EMPTY.fontWeight("bold").textAlign("center").backgroundColor(Color.LIGHT_GRAY);
+        CssBuilder cellStyle = CssBuilder.EMPTY.paddingLeft(CssSize.em(0.5)).paddingRight(CssSize.em(0.5)).merge(borderStyle);
+
+        ReadContextCounter tumorCounter = null;
+        for(ReadContextCounter counter : tumorReadCounters)
         {
-            ReadContextCounter counter = tumorReadCounters.get(i);
-            if (counter.variantVis() == null)
+            if(counter.variantVis() == null)
                 continue;
 
-            allIds.add(tumorIds.get(i));
-            allCounters.add(counter);
+            tumorCounter = counter;
+            break;
         }
 
-        for (int i = 0; i < refReadCounters.size(); i++)
+        ReadContextCounter refCounter = null;
+        for(ReadContextCounter counter : refReadCounters)
         {
-            ReadContextCounter counter = refReadCounters.get(i);
-            if (counter.variantVis() == null)
+            if(counter.variantVis() == null)
                 continue;
 
-            allIds.add(refIds.get(i));
-            allCounters.add(counter);
+            refCounter = counter;
+            break;
         }
 
-        for(int i = 0; i < allCounters.size(); ++i)
+        double nonAvgEdgeDist = firstCounter.readEdgeDistance().avgDistanceFromEdge();
+        double altAvgEdgeDist = firstCounter.readEdgeDistance().avgAltDistanceFromEdge();
+
+        Map<String, List<String>> values = Maps.newLinkedHashMap();
+
+        String tumorValue = tumorCounter == null ? null : String.valueOf(tumorCounter.tumorQuality());
+        String refValue = refCounter == null ? null : String.valueOf(refCounter.tumorQuality());
+        values.put("RAW_QUAL", List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : String.valueOf((int) tumorCounter.averageAltRecalibratedBaseQuality());
+        refValue = refCounter == null ? null : String.valueOf((int) refCounter.averageAltRecalibratedBaseQuality());
+        values.put(AVG_RECALIBRATED_BASE_QUAL, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : String.valueOf((int) tumorCounter.averageAltSeqTechBaseQuality());
+        refValue = refCounter == null ? null : String.valueOf((int) refCounter.averageAltSeqTechBaseQuality());
+        values.put(AVG_SEQ_TECH_BASE_QUAL, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null
+                ? null
+                : String.valueOf(tumorCounter.altSupport() > 0
+                        ? (int) round(tumorCounter.altMapQualityTotal() / (double) tumorCounter.altSupport())
+                        : 0);
+        refValue = refCounter == null
+                ? null
+                : String.valueOf(
+                        refCounter.altSupport() > 0 ? (int) round(refCounter.altMapQualityTotal() / (double) refCounter.altSupport()) : 0);
+        values.put(AVG_READ_MAP_QUALITY, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : format("%.2f", tumorCounter.fragmentStrandBiasAlt().bias());
+        refValue = refCounter == null ? null : format("%.2f", refCounter.fragmentStrandBiasAlt().bias());
+        values.put(FRAG_STRAND_BIAS, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : format("%.2f", tumorCounter.readStrandBiasAlt().bias());
+        refValue = refCounter == null ? null : format("%.2f", refCounter.readStrandBiasAlt().bias());
+        values.put(READ_STRAND_BIAS, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : format("%d-%d", tumorCounter.jitter().shortened(), tumorCounter.jitter().lengthened());
+        refValue = refCounter == null ? null : format("%d-%d", refCounter.jitter().shortened(), refCounter.jitter().lengthened());
+        values.put("JIT", List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : String.valueOf(tumorCounter.fragmentCoords().minCount());
+        refValue = refCounter == null ? null : String.valueOf(refCounter.fragmentCoords().minCount());
+        values.put(MIN_COORDS_COUNT, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : Arrays.toString(tumorCounter.consensusTypeCounts()).replace("[", "").replace("]", "");
+        refValue = refCounter == null ? null : Arrays.toString(refCounter.consensusTypeCounts()).replace("[", "").replace("]", "");
+        values.put(UMI_TYPE_COUNTS, List.of(tumorValue, refValue));
+
+        tumorValue = tumorCounter == null ? null : format("%.2f", nonAvgEdgeDist);
+        refValue = refCounter == null ? null : format("%.2f", altAvgEdgeDist);
+        values.put("AED", List.of(tumorValue, refValue));
+
+        List<List<TdTag>> contentRowsElems = Lists.newArrayList();
+        for(Map.Entry<String, List<String>> entry : values.entrySet())
+            contentRowsElems.add(getSampleInfoRowElements(entry.getKey(), entry.getValue().get(0), entry.getValue().get(1)));
+
+        List<DomContent> rows = Lists.newArrayList();
+        tumorValue = tumorCounter == null ? null : "Tumor";
+        refValue = refCounter == null ? null : "Normal";
+        List<TdTag> elems = getSampleInfoRowElements("Info", tumorValue, refValue).stream()
+                .map(x -> x.withStyle(cellStyle.toString()))
+                .toList();
+
+        rows.add(tr().with(elems).withStyle(headerStyle.toString()));
+        for(List<TdTag> contentRowElems : contentRowsElems)
         {
-            ReadContextCounter counter = allCounters.get(i);
-            String sampleId = allIds.get(i);
+            contentRowElems.set(0, contentRowElems.get(0).withStyle(cellStyle.toString()));
+            for(int j = 1; j < contentRowElems.size(); j++)
+                contentRowElems.set(j, contentRowElems.get(j).withStyle(cellStyle.textAlign("right").toString()));
 
-            int depth = counter.depth();
-            int altSupport = counter.altSupport();
-            int avgAltMapQuality = altSupport > 0 ? (int) Math.round(counter.altMapQualityTotal() / (double) altSupport) : 0;
-
-            List<TdTag> columnElems = Lists.newArrayList(
-                    td(sampleId),
-                    td(String.valueOf(counter.tumorQuality())),
-                    td(String.valueOf(altSupport)),
-                    td(format("%.3f", counter.vaf())),
-                    td(String.valueOf(depth)));
-
-            VariantVis variantVis = counter.variantVis();
-            for(ReadContextMatch matchType : SORTED_MATCH_TYPES)
-            {
-                int count = variantVis.mReadCountByType.getOrDefault(matchType, 0);
-                columnElems.add(td(String.valueOf(count)));
-            }
-
-            columnElems.addAll(Lists.newArrayList(
-                    td(String.valueOf((int) counter.averageAltRecalibratedBaseQuality())),
-                    td(String.valueOf((int) counter.averageAltSeqTechBaseQuality())),
-                    td(format("%d", avgAltMapQuality)),
-                    td(format("%.2f", counter.fragmentStrandBiasAlt().bias())),
-                    td(format("%.2f", counter.readStrandBiasAlt().bias())),
-                    td(format("%d-%d", counter.jitter().shortened(), counter.jitter().lengthened())),
-                    td(format("%d", counter.fragmentCoords().minCount())),
-                    td(Arrays.toString(counter.consensusTypeCounts()).replace("[", "").replace("]", ""))
-                    ));
-
-            for(int j = 0; j < columnElems.size(); ++j)
-            {
-                CssBuilder style = j == 0 ? firstColCellStyle : cellStyle;
-                columnElems.set(j, columnElems.get(j).withStyle(style.toString()));
-            }
-
-            rows.add(tr().with(columnElems));
+            rows.add(tr().with(contentRowElems));
         }
 
-        DomContent sampleInfoTable = styledTable(rows, sampleInfoTableStyle);
-        return div(sampleInfoTable);
+        DomContent table = styledTable(rows, tableStyle);
+        return div(table);
+    }
+
+    private DomContent renderVariantInfoTable(int totalTumorQuality, double mapQualFactor, boolean nearbyIndel, final Set<String> filters,
+            @Nullable final AminoAcidElements aaElements)
+    {
+        CssBuilder borderStyle = CssBuilder.EMPTY.border(CssSize.px(1.0), "solid", Color.BLACK).borderCollapse("collapse");
+        CssBuilder tableStyle = borderStyle;
+        CssBuilder headerStyle = CssBuilder.EMPTY.fontWeight("bold").textAlign("center").backgroundColor(Color.LIGHT_GRAY);
+        CssBuilder cellStyle = CssBuilder.EMPTY.paddingLeft(CssSize.em(0.5)).paddingRight(CssSize.em(0.5)).merge(borderStyle);
+        CssBuilder coreStyle = CssBuilder.EMPTY.fontWeight("bold");
+
+        Map<String, List<DomContent>> values = Maps.newLinkedHashMap();
+        if(aaElements != null && aaElements.variant != null)
+        {
+            VariantContext variantContext = aaElements.variant;
+            List<String> impact = (List<String>) variantContext.getAttribute(IMPACT_KEY);
+            String geneName = impact.get(GENE_NAME_IDX);
+            String transcriptName = impact.get(TRANSCRIPT_NAME_IDX);
+            String aaVariantType = impact.get(AA_VARIANT_TYPE_IDX);
+            String hgvs = impact.get(HGVS_INDEX);
+
+            values.put("Gene", List.of(span(geneName)));
+            values.put("Transcript", List.of(span(transcriptName)));
+            values.put("HGVS", List.of(span(hgvs)));
+            values.put("Coding impact", List.of(span(aaVariantType)));
+        }
+
+        String filterStr = "PASS";
+        if(!filters.isEmpty())
+            filterStr = String.join(",", filters);
+
+        List<DomContent> contextElems = Lists.newArrayList();
+        contextElems.add(span(mReadContext.leftFlankStr()));
+        contextElems.add(span(mReadContext.coreStr()).withStyle(coreStyle.toString()));
+        contextElems.add(span(mReadContext.rightFlankStr()));
+
+        String repeatStr = "NO REPEAT";
+        if(mReadContext.MaxRepeat != null)
+            repeatStr = format("%dx%s", mReadContext.MaxRepeat.Count, mReadContext.MaxRepeat.Bases);
+
+        values.put("Qual", List.of(span(String.valueOf(totalTumorQuality))));
+        values.put("Filter", List.of(span(filterStr)));
+        values.put("Tier", List.of(span(mVariantTier.name())));
+        values.put("CONTEXT", contextElems);
+        values.put("NEARBY_INDEL", List.of(span(String.valueOf(nearbyIndel))));
+        values.put("REPEAT", List.of(span(repeatStr)));
+        values.put("MQF", List.of(span(String.valueOf(mapQualFactor))));
+
+        List<List<TdTag>> rowsElems = Lists.newArrayList();
+        for(Map.Entry<String, List<DomContent>> entry : values.entrySet())
+        {
+            rowsElems.add(List.of(
+                    td(entry.getKey()).withStyle(cellStyle.merge(headerStyle).toString()),
+                    td().with(entry.getValue()).withStyle(cellStyle.toString())
+            ));
+        }
+
+        List<DomContent> rows = Lists.newArrayList();
+        for(List<TdTag> rowElems : rowsElems)
+            rows.add(tr().with(rowElems));
+
+        DomContent table = styledTable(rows, tableStyle);
+        return div(table);
     }
 
     private static DomContent getJavascript()
@@ -416,22 +609,31 @@ public class VariantVis
         });
     }
 
-    private String getFilename(final String sampleId)
+    private String getFilename(final String sampleId, @Nullable final String geneName, @Nullable final String variantType)
     {
         String filename = mVariantKey;
+        String geneNamePrefix = geneName == null ? "" : geneName + "_";
+        String sanitisedVariantType = null;
+        if(variantType != null)
+        {
+            sanitisedVariantType = variantType.replaceAll("&", "_");
+            sanitisedVariantType = sanitisedVariantType.replaceAll("\\s", "");
+        }
+
+        String variantTypeSuffix = sanitisedVariantType == null ? "" : "_" + sanitisedVariantType;
 
         if(!filename.startsWith(CHR_PREFIX))
             filename = CHR_PREFIX + filename;
 
-        filename = sampleId + ".sage." + filename;
+        filename = sampleId + ".sage." + geneNamePrefix + filename;
 
         SortedSet<String> indexedBasesKeySet = VARIANT_INDEXED_BASES_MAP.get(mVariantKey);
         if(indexedBasesKeySet.size() == 1)
-            return filename + ".html";
+            return filename + variantTypeSuffix + ".html";
 
         int variantFileNum = indexedBasesKeySet.headSet(mIndexedBasesKey).size() + 1;
         String formatStr = format("%%0%dd", String.valueOf(indexedBasesKeySet.size()).length());
-        return filename + "_" + format(formatStr, variantFileNum) + ".html";
+        return filename + "_" + format(formatStr, variantFileNum) + variantTypeSuffix + ".html";
     }
 
     public void addEvidence(
@@ -441,13 +643,7 @@ public class VariantVis
         ++mReadCount;
         mReadCountByType.put(matchType, mReadCountByType.getOrDefault(matchType, 0) + 1);
 
-        List<ReadEvidenceRecord> records = mReadEvidenceRecordsByType.get(matchType);
-        if(records == null)
-        {
-            records = Lists.newArrayList();
-            mReadEvidenceRecordsByType.put(matchType, records);
-        }
-
+        List<ReadEvidenceRecord> records = mReadEvidenceRecordsByType.computeIfAbsent(matchType, k -> Lists.newArrayList());
         if(fragment == null)
         {
             records.add(new ReadEvidenceRecord(read, null, matchType, modifiedQualities, mVariant.Position));
@@ -474,62 +670,143 @@ public class VariantVis
         records.add(new ReadEvidenceRecord(read, fragment, matchType, modifiedQualities, mVariant.Position));
     }
 
-    private DomContent renderVariantInfo(int totalTumorQuality, double mapQualFactor, boolean nearbyIndel, double maxDistanceFromEdge,
-                                         double nonAvgEdgeDist, double altAvgEdgeDist, final Set<String> filters)
+    private DomContent renderVariantInfo(final List<String> tumorIds, final List<String> referenceIds)
     {
-        CssBuilder horizontalSpacerStyle = CssBuilder.EMPTY.width(VARIANT_INFO_SPACING_SIZE).display("inline-block");
-        CssBuilder coreStyle = CssBuilder.EMPTY.fontWeight("bold");
+        CssBuilder strongStyle = CssBuilder.EMPTY.fontWeight("bold");
 
-        DomContent horizontalSpacer = div().withStyle(horizontalSpacerStyle.toString());
+        StringJoiner infoJoiner = new StringJoiner(" ");
+        if(tumorIds.isEmpty())
+            infoJoiner.add(referenceIds.get(0));
+        else if(referenceIds.isEmpty())
+            infoJoiner.add(tumorIds.get(0));
+        else
+            infoJoiner.add(format("%s[normal: %s]", tumorIds.get(0), referenceIds.get(0)));
 
-        String repeatStr = "NO REPEAT";
-        if(mReadContext.MaxRepeat != null)
-        {
-            repeatStr = format("REPEAT = %dx%s", mReadContext.MaxRepeat.Count, mReadContext.MaxRepeat.Bases);
-        }
+        infoJoiner.add(mVariant.chromosome() + ":" + mVariant.Position);
+        infoJoiner.add(mVariant.ref() + ">" + mVariant.alt());
 
-        String filterStr = "FILTER = PASS";
-        if(!filters.isEmpty())
-            filterStr = "FILTER = " + filters.stream().collect(Collectors.joining(","));
-
-        List<DomContent> contextElems = Lists.newArrayList();
-        contextElems.add(span("CONTEXT = "));
-        contextElems.add(span(mReadContext.leftFlankStr()));
-        contextElems.add(span(mReadContext.coreStr()).withStyle(coreStyle.toString()));
-        contextElems.add(span(mReadContext.rightFlankStr()));
-
-        DomContent variantInfoRow = tr(
-                td(mVariant.chromosome() + ":" + mVariant.Position),
-                td(horizontalSpacer),
-                td(mVariant.ref() + " > " + mVariant.alt()),
-                td(horizontalSpacer),
-                td("TIER = " + mVariantTier.name()),
-                td(horizontalSpacer),
-                td("QUAL = " + totalTumorQuality),
-                td(horizontalSpacer),
-                td("MQF = " + mapQualFactor),
-                td(horizontalSpacer),
-                td(repeatStr),
-                td(horizontalSpacer),
-                td("NEARBY_INDEL = " + nearbyIndel),
-                td(horizontalSpacer),
-                td("MED = " + format("%.2f", maxDistanceFromEdge)),
-                td(horizontalSpacer),
-                td("AED = " + format("%.2f", nonAvgEdgeDist) + "," + format("%.2f", altAvgEdgeDist)),
-                td(horizontalSpacer),
-                td(filterStr),
-                td(horizontalSpacer),
-                td().with(contextElems));
-
-        DomContent variantInfoTable = styledTable(Lists.newArrayList(variantInfoRow), CssBuilder.EMPTY);
-        return div(variantInfoTable);
+        return div(infoJoiner.toString()).withStyle(strongStyle.toString());
     }
 
-    private List<DomContent> renderReads(boolean isTumor)
+    private record AminoAcidElements(String geneRegionLabel, DomContent ref, DomContent alt, @Nullable VariantContext variant) {}
+
+    private record TranscriptNameNode(String name, boolean isVariant, boolean isCanonical) implements Comparable<TranscriptNameNode>
+    {
+
+        @Override
+        public int compareTo(final TranscriptNameNode o)
+        {
+            if(isVariant == o.isVariant)
+            {
+                if(isCanonical == o.isCanonical)
+                    return name.compareTo(o.name);
+
+                return isCanonical ? -1 : 1;
+            }
+
+            return isVariant ? -1 : 1;
+        }
+    }
+
+    @Nullable
+    private static AminoAcidElements getAminoAcidsElements(final VisConfig config, @Nullable final ReferenceData refData,
+            final BaseRegion viewRegion, final SageVariant sageVariant, final RefGenomeSource refGenome)
+    {
+        if(config.PurpleVcf == null)
+        {
+            SG_LOGGER.debug("skipping amino acid annotations in vis, since purple vcf not given");
+            return null;
+        }
+
+        if(refData == null || !refData.geneDataCacheLoaded())
+        {
+            SG_LOGGER.debug("skipping amino acid annotations in vis, since ensembl data is not loaded");
+            return null;
+        }
+
+        final SimpleVariant simpleVariant = sageVariant.variant();
+        List<VariantContext> vcfVariants;
+        try(VcfFileReader vcfFileReader = new VcfFileReader(config.PurpleVcf.toString(), true))
+        {
+            vcfVariants = vcfFileReader.findVariants(simpleVariant.Chromosome, viewRegion.start(), viewRegion.end());
+        }
+
+        if(vcfVariants == null)
+            throw new RuntimeException(format("Failed to read purple VCF: %s", config.PurpleVcf));
+
+        if(vcfVariants.isEmpty())
+            return null;
+
+        TranscriptNameNode bestTranscriptName = null;
+        List<AminoAcidEvent> aaEvents = Lists.newArrayList();
+        VariantContext variant = null;
+        for(VariantContext variantContext : vcfVariants)
+        {
+            Object rawImpact = variantContext.getAttribute(IMPACT_KEY);
+            if(rawImpact == null)
+                continue;
+
+            List<String> impact = (List<String>) rawImpact;
+            String transcriptName = impact.get(TRANSCRIPT_NAME_IDX);
+            TranscriptAminoAcids transcriptAminoAcids = refData.TransAminoAcidMap.get(transcriptName);
+            boolean isCanonical = transcriptAminoAcids.Canonical;
+
+            String hgvs = impact.get(HGVS_INDEX);
+            if("p.?".equals(hgvs) || "unknown".equals(hgvs))
+            {
+                aaEvents = null;
+            }
+            else if(aaEvents != null && !"".equals(hgvs))
+            {
+                aaEvents.addAll(AminoAcidEvent.parse(hgvs));
+            }
+
+            boolean variantMatches = variantContext.getContig().equals(simpleVariant.chromosome());
+            if(variantContext.getStart() != simpleVariant.Position)
+                variantMatches = false;
+
+            if(!variantContext.getReference().basesMatch(simpleVariant.Ref))
+                variantMatches = false;
+
+            if(!variantContext.getAltAlleleWithHighestAlleleCount().basesMatch(simpleVariant.Alt))
+                variantMatches = false;
+
+            TranscriptNameNode newTranscriptName = new TranscriptNameNode(transcriptName, variantMatches, isCanonical);
+            if(bestTranscriptName == null || newTranscriptName.compareTo(bestTranscriptName) < 0)
+                bestTranscriptName = newTranscriptName;
+
+            if(!variantMatches)
+                continue;
+
+            variant = variantContext;
+        }
+
+        if(bestTranscriptName == null)
+            return null;
+
+        String transcriptName = bestTranscriptName.name;
+        TranscriptAminoAcids transcriptAminoAcids = refData.TransAminoAcidMap.get(transcriptName);
+        TranscriptData transcriptExons = refData.GeneDataCache.getTranscriptData(transcriptAminoAcids.GeneId, transcriptName);
+
+        if(aaEvents == null)
+            aaEvents = Collections.emptyList();
+
+        SvgRender.RenderedGeneData renderedGeneData = renderAminoAcids(
+		viewRegion, transcriptExons, transcriptAminoAcids, aaEvents, refGenome, sageVariant);
+
+        String geneRegionLabel = getGeneRegionLabel(transcriptExons, sageVariant.position());
+        return new AminoAcidElements(
+                transcriptAminoAcids.GeneName + " " + geneRegionLabel,
+                rawHtml(renderedGeneData.refSvgCanvas().getSVGElement()),
+                rawHtml(renderedGeneData.altSvgCanvas().getSVGElement()),
+                variant);
+    }
+
+    private List<DomContent> renderReads(boolean isTumor, @Nullable final AminoAcidElements aaElements)
     {
         CssBuilder lightGrayBgStyle = CssBuilder.EMPTY.backgroundColor(Color.LIGHT_GRAY);
         CssBuilder verticalHeaderStyle = CssBuilder.EMPTY.backgroundColor(Color.LIGHT_GRAY).writingMode("vertical-rl");
-        CssBuilder headerStyle = CssBuilder.EMPTY.backgroundColor(Color.LIGHT_GRAY).textAlign("center");
+        CssBuilder headerStyle = CssBuilder.EMPTY.backgroundColor(Color.LIGHT_GRAY).textAlign("right");
         CssBuilder matchTypeBorderStyle = CssBuilder.EMPTY.borderBottom(CssSize.px(2), "solid", Color.BLACK);
         CssBuilder matchTypeStyle = verticalHeaderStyle.merge(matchTypeBorderStyle).textAlign("center").padding(CssSize.px(4));
         CssBuilder tableInfoCellStyle = CssBuilder.EMPTY.fontSizePt((int) Math.round(2.0 / 3.0 * READ_HEIGHT_PX)).fontWeight("bold");
@@ -558,6 +835,27 @@ public class VariantVis
         headerCols.add(td(rawHtml(renderCoords(READ_HEIGHT_PX, mViewRegion, mVariant.position(), DISPLAY_EVERY_NTH_COORD).getSVGElement())).withStyle(lightGrayBgStyle.toString()));
         DomContent headerRow = tr().with(headerCols);
         tableRows.add(headerRow);
+
+        // amino acids
+        if(aaElements != null)
+        {
+            // ref amino acid row
+            DomContent aaRefRow = tr(td("ref").attr("colspan", columns.size() + 1).withStyle(headerStyle.toString()), td(aaElements.ref));
+            tableRows.add(aaRefRow);
+
+            // predicted amino acids row
+            DomContent aaPredictedRow = tr(
+		    td("predicted").attr("colspan", columns.size() + 1).withStyle(headerStyle.toString()), td(aaElements.alt));
+            tableRows.add(aaPredictedRow);
+
+            // gene name row
+            CssBuilder geneNameStyle = CssBuilder.EMPTY
+		    .fontSizePt((int) Math.round(2.0 / 3.0 * READ_HEIGHT_PX)).fontWeight("bold").textAlign("center");
+            DomContent geneNameRow = tr(
+                    td("gene").attr("colspan", columns.size() + 1).withStyle(headerStyle.toString()),
+                    td(aaElements.geneRegionLabel).withStyle(geneNameStyle.toString()));
+            tableRows.add(geneNameRow);
+        }
 
         // ref row
         DomContent refRow = tr(td("ref").attr("colspan", columns.size() + 1).withStyle(headerStyle.toString()), td(renderRef()));
@@ -693,7 +991,7 @@ public class VariantVis
 
     private DomContent renderRead(final ReadEvidenceRecord readEvidence)
     {
-        BaseSeqViewModel readViewModel = null;
+        BaseSeqViewModel readViewModel;
         BaseSeqViewModel firstViewModel = null;
         BaseSeqViewModel secondViewModel = null;
         if(readEvidence.Fragment == null)
@@ -740,6 +1038,18 @@ public class VariantVis
         }
 
         return containerDiv;
+    }
+
+    private static SvgRender.RenderedGeneData renderAminoAcids(final BaseRegion viewRegion, final TranscriptData transcriptExons,
+            final TranscriptAminoAcids transcriptAminoAcids, final List<AminoAcidEvent> events, final RefGenomeSource refGenome,
+            final SageVariant variant)
+    {
+        boolean posStrand = transcriptExons.posStrand();
+        List<GeneRegionViewModel> geneRegions = getGeneRegions(transcriptExons);
+        List<GeneRegionViewModel> refViewModels = getRefGeneRegionViewModels(transcriptExons, transcriptAminoAcids, geneRegions);
+        List<GeneRegionViewModel> altViewModels = getAltGeneRegionViewModels(
+		transcriptExons, transcriptAminoAcids, geneRegions, events, viewRegion, refGenome, variant);
+        return renderGeneData(READ_HEIGHT_PX, viewRegion, posStrand, refViewModels, altViewModels);
     }
 
     private DomContent renderBases(final BaseSeqViewModel bases, boolean shadeQuals, boolean compareToRef)
